--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -113,10 +113,17 @@
     "static.report.forcastingUOM": "Forecasting Unit (UoM)",
     "static.country.countryadd": "Add country",
     "static.tracercategory.tracercategory": "Tracer Category",
+    "static.momper.tooltip5": "(% of Population (No Seasonality))*(1+Seasonality Index)+(Manual Change). In other words, the final % for this node.",
+    "static.momper.tooltip6": "Value of the parent node.",
+    "static.momper.tooltip3": "Enter a positive % for an increased value in this month or a negative value for a decreased value.  For example, 5% indicates that this month's value is 5% over the non-seasonal value (or 105%), whereas -5% indicates that it is 5% under the non-seasonal value (or 95%).",
+    "static.momper.tooltip4": "Enter any changes not captured by the modeling table or seasonality index. If the checkbox \"Manual change affects future month\" is checked, this change will affect future months. If unchecked, this change will only affect the current month",
+    "static.momper.tooltip1": "Calculated change is determined by the modeling table above.",
+    "static.momper.tooltip2": "(Previous Month's %) + (Calculated Change +/- %)",
     "static.extrapolation.SimpleLinear": "Simple Linear Regression",
     "static.dashboard.realmlevelmaster": "Realm level masters",
     "static.extrapolation.TripleExponential": "Triple Exponential Smoothing (Holt-Winters)",
     "static.extrapolation.MAE": "MAE (Mean Absolute Error)",
+    "static.momper.tooltip7": "(% of Parent) * (Parent Value). In other words, the forecasted value for this node is the product of the two previous columns.",
     "static.compareAndSelect.totalForecast": "Total Forecast",
     "static.supplyPlan.erpShipments": "ERP-linked shipments",
     "static.dashboard.procurementUnit": "Procurement Units",
@@ -167,6 +174,7 @@
     "static.dashboard.qatProblemList": "QAT Problem List",
     "static.placeholder.LagInMonthFUNode": "Use this feature for phased product usage. For example, if the lag is 2, the product usage will begin 2 months after the parent node dates.",
     "static.priority.medium": "Medium",
+    "static.import.doNoImportCheckbox": "Do not import all unmapped planning units",
     "static.mt.reminders4A": "If you delink a shipment, the QAT shipment will revert to the original shipment’s note and not carry over any updates you made after linking. For this, we recommend copying the note before de-linking and pasting it into the QAT shipment after.",
     "static.dataentry.maxRange": "Please select date range within 36 months",
     "static.program.programmanager": "Program manager",
@@ -212,6 +220,7 @@
     "static.procurementUnit.heightQtyText": "Enter Height Quantity",
     "static.translation.pourtegese": "Portuguese",
     "static.tooltip.StartValueModelingTool": "If you wish to create multiple rows of modeling in which the ending value of the first row should be the start value of the second row and you are using the modeling calculator, you will need to click the update button before creating the second row, otherwise the start value will be the same as the first row",
+    "static.whatIf.validStartValue": "Enter Start Value",
     "static.tree.requires": "requires",
     "static.procurementUnit.multiplierText": "Enter Conversion Factor (How many Planning Units are in 1 Procurement Unit?)",
     "static.supplyPlan.batchNumberMissing": "Batch total quantity does not match final order quantity",
@@ -654,6 +663,7 @@
     "static.dashboard.realmcountrylist": "Realm countries",
     "static.report.historicalConsumptionDiff": "Historical Consumption Difference",
     "static.report.isincludeplannedshipmentSelect": "Include Planned Shipments",
+    "static.whatIf.validEndValue": "Enter End Value",
     "static.compareAndSelect.belowLowestConsumption": "% below the lowest consumption forecast.",
     "static.extrapolation.MoreSensitive": "More sophisticated models are more sensitive to problems in the data",
     "static.common.listtree": "List Tree",
@@ -697,6 +707,7 @@
     "static.message.confirmPasswordRequired": "Confirm new password",
     "static.programPlanningUnit.validReorderFrequencyText": "Enter Reorder Interval (# months between reorders)",
     "static.procurementAgentProcurementUnit.procurementUnitAlreadyExists": "Procurement Unit already exists",
+    "static.scenarioPlanning.endValue": "End Value",
     "static.product.unit": "Forecasting unit",
     "static.report.exportCsv": "Export CSV",
     "static.supplyPlan.daysOfStockMaxValue": "Enter value less than or equal to 31.",
@@ -1932,6 +1943,7 @@
     "static.report.min": "Min",
     "static.report.fundingSource": "Shipment Cost by Funding Source",
     "static.common.loadDeleteDataSet": "Download or Delete Program",
+    "static.scenarioPlanning.phaseInPhaseOut": "Forecast Phase In/Out Product",
     "static.importFromQATSupplyPlan.supplyPlanProgram": "Supply Plan Program",
     "static.dataEntryAndAdjustments.DaysInMonth": "(# of Days in Month)",
     "static.tree.startValue": "Start Value",
@@ -2524,6 +2536,7 @@
     "static.supplyPlan.orderNoAndPrimeLineNo": "Order Number and Prime Line Number",
     "static.dashboard.programdashboard": "Program dashboard",
     "static.common.selectPlanningUnit": "Select Planning Unit",
+    "static.program.noOfProgramsUsingPU": "# Programs using PU",
     "static.listTree.deleteDuplicateExistingTree": "Delete or duplicate existing trees by right clicking on a row",
     "static.scenarioPlanning.monthInFutureValidation": "Please select Months in Future for AMC",
     "static.forecastingUnit.genericForecastingUnitName": "Generic Name for Forecasting Unit",
@@ -2597,7 +2610,6 @@
     "static.programPU.minQtyTooltip": "Required if planning by quantity. Note that maximum MOS = min MOS + reorder interval. * AMC",
     "static.syncProgram.loadAndDeleteWithUncommittedChanges": "For program {{programCode}}, There is a most recent server version. Do you want to download and delete? (Warning! you have non uploaded changes)",
     "static.LoadConsumptionFromSupplyPlanning.LoadConsumptionFromSupplyPlanning": "Load Consumption from Supply Planning",
-    "static.shipmentTooltip.freightCost": "Calculated using the user-entered freight percentage in the Update Program Info screen",
     "static.dataEntryAndAdjustments.NumberOfStock": "For imported data, the number of stock out days is pulled in from the QAT supply plan program, if data is collected. The default value for stock out days is zero days (product assumed always in stock). The user can change this to the correct value. The calculation assumes that the days the product was stocked out would have had the same consumption rate as the rest of the time the product was in stock. The default value for number of days in a month are based on the calendar days, but users can adjust the number of days used for the stock out calculation in",
     "static.program.dataimportsuccess": "Data imported successfully",
     "static.ManageTree.ClickOnGearIcon": "Click on the gear icon",
@@ -2620,6 +2632,7 @@
     "static.report.forecastErrorMonthlyFormulaNew6": "If “Show consumption adjusted for stock out?” checkbox is checked, QAT uses the adjusted actual consumption instead of the actual consumption. QAT calculates the total days in the month based on the calendar. ",
     "static.report.forecastErrorMonthlyFormulaNew7": "If there are ",
     "static.supplyPlanFormula.expiredStockNote": "All batches begin with shipments. All expiries assumed to happen at beginning of the month regardless of expiry date. For more details on batch calculations, please see User Manual – Annex on Business Rules.",
+    "static.program.noOfProgramsUsingFU": "# Programs using FU",
     "static.currency.currencycodemax4digittext": "Maximum 4 characters only",
     "static.ModelingTransfer.ModelingTransfer": "Add/Edit Node - Modeling/Transfer",
     "static.report.forecastErrorMonthlyFormulaNew8": "For each month, adds up actual consumption (or adjusted actual consumption) across all regions, so that there is only one actual consumption figure per month. ",
@@ -3174,6 +3187,7 @@
     "static.dashboard.shipmentGlobalDemandView": "Shipments - Global Demand View",
     "static.login.goOnline": "Go Online",
     "static.dataentry.showErrors": "Show only errors",
+    "static.module": "Module",
     "static.supplyPlan.endingBalance": "Ending Balance",
     "static.usageTemplate.fuPerPersonPerTime": "# Of FU / Person / Time",
     "static.common.youdatastart": "Your data has started from here",
