--- a/src/assets/img/locales/fr.json
+++ b/src/assets/img/locales/fr.json
@@ -113,10 +113,17 @@
     "static.report.forcastingUOM": "Unité de mesure du produit (prévision)",
     "static.country.countryadd": "Ajouter un pays",
     "static.tracercategory.tracercategory": "Catégorie de traceur",
+    "static.momper.tooltip5": "(% de la population (pas de saisonnalité))*(1+Indice de saisonnalité)+(Changement manuel). En d'autres termes, le % final pour ce nœud.",
+    "static.momper.tooltip6": "Valeur du nœud parent.",
+    "static.momper.tooltip3": "Entrez un % positif pour une valeur augmentée ce mois-ci ou une valeur négative pour une valeur diminuée.  Par exemple, 5 % indique que la valeur de ce mois est de 5 % au-dessus de la valeur non saisonnière (ou 105 %), tandis que -5 % indique qu'elle est de 5 % en dessous de la valeur non saisonnière (ou 95 %).",
+    "static.momper.tooltip4": "Saisissez toutes les modifications non capturées par la table de modélisation ou l'indice de saisonnalité. Si la case « La modification manuelle affecte les mois suivants » est cochée, cette modification affectera les mois suivants. Si cette case n'est pas cochée, ce changement n'affectera que le mois en cours.",
+    "static.momper.tooltip1": "Le changement calculé est déterminé par le tableau de modélisation ci-dessus.",
+    "static.momper.tooltip2": "(%) du mois précédent + (variation calculée +/- %)",
     "static.extrapolation.SimpleLinear": "Régression linéaire simple",
     "static.dashboard.realmlevelmaster": "Données de base du domaine",
     "static.extrapolation.TripleExponential": "Lissage exponentiel triple (Holt-Winters)",
     "static.extrapolation.MAE": "MAE (erreur absolue moyenne)",
+    "static.momper.tooltip7": "(% du parent) * (Valeur parent). Autrement dit, la valeur prévue pour ce nœud est le produit des deux colonnes précédentes.",
     "static.compareAndSelect.totalForecast": "Prévision Totale",
     "static.supplyPlan.erpShipments": "Expéditions depuis le PGI",
     "static.dashboard.procurementUnit": "Unités d`approvisionnement",
@@ -166,7 +173,8 @@
     "static.integration.editIntegration": "Modifier lintégration",
     "static.dashboard.qatProblemList": "Liste des problèmes QAT",
     "static.placeholder.LagInMonthFUNode": "Utilisez cette fonctionalité pour les produits échelonnés. Par exemple, si le délai avant usage est de 2, l'usage du produit commencera 2 mois après les dates du nœud source",
-    "static.priority.medium": "Moyen",
+
+    "static.import.doNoImportCheckbox": "Ne pas importer toutes les unités de planification non mappées",
     "static.mt.reminders4A": "Si vous dissociez une expédition, l’expédition QAT reviendra à la note d’expédition originale et ne reportera pas les mises à jour que vous avez effectuées après la liaison. Pour cela, nous vous recommandons de copier la note avant de la dissocier et de la coller dans l'expédition QAT après.",
     "static.dataentry.maxRange": "Veuillez sélectionner une plage de dates dans les 36 mois",
     "static.program.programmanager": "Gestionnaire de programme",
@@ -212,6 +220,8 @@
     "static.procurementUnit.heightQtyText": "Entrez la mesure de hauteur",
     "static.translation.pourtegese": "Portugais",
     "static.tooltip.StartValueModelingTool": "Si vous souhaitez créer plusieurs lignes de modélisation dans lesquelles la valeur de fin de la première ligne doit être la valeur de début de la deuxième ligne et que vous utilisez la calculatrice de modélisation, vous devrez cliquer sur le bouton de mise à jour avant de créer la deuxième ligne, sinon la valeur de départ sera la même que la première ligne",
+    "static.priority.medium": "Moyen",
+    "static.whatIf.validStartValue": "Entrez la valeur de départ",
     "static.tree.requires": "nécessite",
     "static.procurementUnit.multiplierText": "Entrez le multiplicateur",
     "static.supplyPlan.batchNumberMissing": "La quantité totale du numéro de lot ne correspond pas à la quantité de commande finale",
@@ -654,6 +664,7 @@
     "static.dashboard.realmcountrylist": "Pays du Domaine",
     "static.report.historicalConsumptionDiff": "Différence en consommation historique",
     "static.report.isincludeplannedshipmentSelect": "Inclure les expéditions planifiées",
+    "static.whatIf.validEndValue": "Entrez la valeur finale",
     "static.compareAndSelect.belowLowestConsumption": "% en dessous de la prévision de consommation la plus basse.",
     "static.extrapolation.MoreSensitive": "Les modèles plus sophistiqués sont plus sensibles aux problèmes de qualité des données",
     "static.common.listtree": "Liste des arbres de prévision",
@@ -697,6 +708,7 @@
     "static.message.confirmPasswordRequired": "Confirmer le nouveau mot de passe",
     "static.programPlanningUnit.validReorderFrequencyText": "Entrez l`intervalle de commande (# mois entre les commandes)",
     "static.procurementAgentProcurementUnit.procurementUnitAlreadyExists": "L`unité des achats existe déjà",
+    "static.scenarioPlanning.endValue": "Valeur finale",
     "static.product.unit": "Unité de prévision",
     "static.report.exportCsv": "Exporter en CSV",
     "static.supplyPlan.daysOfStockMaxValue": "Entrez une valeur inférieure ou égale à 31",
@@ -1932,6 +1944,7 @@
     "static.report.min": "Min",
     "static.report.fundingSource": "Coût des envois par source de financement",
     "static.common.loadDeleteDataSet": "Charger ou supprimer un programme",
+    "static.scenarioPlanning.phaseInPhaseOut": "Produit d’entrée/sortie prévu",
     "static.importFromQATSupplyPlan.supplyPlanProgram": "Programme du plan d'approvisionnement ",
     "static.dataEntryAndAdjustments.DaysInMonth": "(Nombre de jours dans le mois)",
     "static.tree.startValue": "Valeur de départ",
@@ -2524,6 +2537,7 @@
     "static.supplyPlan.orderNoAndPrimeLineNo": "Numéro de commande et numéro de ligne principale",
     "static.dashboard.programdashboard": "Tableau de bord du programme",
     "static.common.selectPlanningUnit": "Sélectionner l`unité de planification",
+    "static.program.noOfProgramsUsingPU": "# Programmes utilisant PU",
     "static.listTree.deleteDuplicateExistingTree": "Supprimer ou dupliquer des arbres existants en faisant un clic droit sur une ligne",
     "static.scenarioPlanning.monthInFutureValidation": "Veuillez sélectionner les mois à venir pour AMC",
     "static.forecastingUnit.genericForecastingUnitName": "Nom générique de l`unité de prévision",
@@ -2620,6 +2634,7 @@
     "static.report.forecastErrorMonthlyFormulaNew6": "Si « Afficher la consommation corrigée des ruptures de stock ? est cochée, QAT utilise la consommation réelle ajustée au lieu de la consommation réelle. QAT calcule le nombre total de jours dans le mois en fonction du calendrier.",
     "static.report.forecastErrorMonthlyFormulaNew7": "S`il y a",
     "static.supplyPlanFormula.expiredStockNote": "Tous les lots commencent par les expéditions. Toutes les expirations sont supposées se produire au début du mois, quelle que soit la date d`expiration. Pour plus de détails sur les calculs par lots, veuillez consulter le Manuel de l`utilisateur - Annexe sur les règles commerciales.",
+    "static.program.noOfProgramsUsingFU": "# Programmes utilisant FU",
     "static.currency.currencycodemax4digittext": "Maximum 4 caractères seulement",
     "static.ModelingTransfer.ModelingTransfer": "Ajouter/Modifier un nœud - Modélisation/Transfert",
     "static.report.forecastErrorMonthlyFormulaNew8": "Pour chaque mois, additionne la consommation réelle (ou la consommation réelle ajustée) dans toutes les régions, de sorte qu`il n`y ait qu`un seul chiffre de consommation réelle par mois.",
@@ -3174,6 +3189,7 @@
     "static.dashboard.shipmentGlobalDemandView": "Expéditions - Vue de la demande globale",
     "static.login.goOnline": "Passer en ligne",
     "static.dataentry.showErrors": "Afficher uniquement les erreurs",
+    "static.module": "Module",
     "static.supplyPlan.endingBalance": "Solde de clôture",
     "static.usageTemplate.fuPerPersonPerTime": "Nombre d'UPr / Personne / unité de temps",
     "static.common.youdatastart": "Début d`enregistrements à partir d`ici ",
