--- a/src/assets/img/locales/pr.json
+++ b/src/assets/img/locales/pr.json
@@ -113,10 +113,17 @@
     "static.report.forcastingUOM": "Unidade de previsão (UoM)",
     "static.country.countryadd": "Adicionar país",
     "static.tracercategory.tracercategory": "Categoria de rastreamento",
+    "static.momper.tooltip5": "(% da População (Sem Sazonalidade))*(1+Índice de Sazonalidade)+(Alteração Manual). Em outras palavras, a% final para este nó.",
+    "static.momper.tooltip6": "Valor do nó pai.",
+    "static.momper.tooltip3": "Insira uma % positiva para um valor aumentado neste mês ou um valor negativo para um valor diminuído.  Por exemplo, 5% indica que o valor deste mês está 5% acima do valor não sazonal (ou 105%), enquanto -5% indica que está 5% abaixo do valor não sazonal (ou 95%).",
+    "static.momper.tooltip4": "Insira quaisquer alterações não capturadas pela tabela de modelagem ou índice de sazonalidade. Se a caixa de seleção \"A alteração manual afeta o mês futuro\" estiver marcada, esta alteração afetará os meses futuros. Se desmarcada, esta alteração afetará apenas o mês atual",
+    "static.momper.tooltip1": "A mudança calculada é determinada pela tabela de modelagem acima.",
+    "static.momper.tooltip2": "(% do mês anterior) + (alteração calculada +/-%)",
     "static.extrapolation.SimpleLinear": "Regressão Linear Simples",
     "static.dashboard.realmlevelmaster": "Dados mestres do reino",
     "static.extrapolation.TripleExponential": "Suavização Exponencial Tripla (Holt-Winters)",
     "static.extrapolation.MAE": "MAE (Erro Absoluto Médio)",
+    "static.momper.tooltip7": "(% do pai) * (valor pai). Em outras palavras, o valor previsto para este nó é o produto das duas colunas anteriores.",
     "static.compareAndSelect.totalForecast": "Previsão Total",
     "static.supplyPlan.erpShipments": "Embarques vinculados ao ERP",
     "static.dashboard.procurementUnit": "Unidades de aquisição",
@@ -167,6 +174,7 @@
     "static.dashboard.qatProblemList": "Lista de Problemas QAT",
     "static.placeholder.LagInMonthFUNode": "Use esse recurso para uso do produto em fases. Por exemplo, se o atraso for 2, o uso do produto começará 2 meses após as datas do nó de origem.",
     "static.priority.medium": "Médio",
+    "static.import.doNoImportCheckbox": "Não importe todas as unidades de planejamento não mapeadas",
     "static.mt.reminders4A": "Se você desvincular um pedido, o pedido QAT reverterá para a nota original e não carregará nenhuma atualização feita após a vinculação. Para isso, recomendamos copiar a nota antes de desvincular e colá-la no embarque QAT depois.",
     "static.dataentry.maxRange": "Selecione o intervalo de datas dentro de 36 meses",
     "static.program.programmanager": "Gestor do programa",
@@ -212,6 +220,7 @@
     "static.procurementUnit.heightQtyText": "Insira a altura",
     "static.translation.pourtegese": "Português",
     "static.tooltip.StartValueModelingTool": "Se você deseja criar várias linhas de modelagem nas quais o valor final da primeira linha deve ser o valor inicial da segunda linha e você está usando a calculadora de modelagem, você precisará clicar no botão atualizar antes de criar a segunda linha, caso contrário o valor inicial será o mesmo da primeira linha",
+    "static.whatIf.validStartValue": "Insira o valor inicial",
     "static.tree.requires": "requer",
     "static.procurementUnit.multiplierText": "Insira o factor de conversão (quantas unidades de planeamento existem em 1 unidade de aquisição?)",
     "static.supplyPlan.batchNumberMissing": "A quantidade total do lote não corresponde à quantidade final do embarque",
@@ -654,6 +663,7 @@
     "static.dashboard.realmcountrylist": "Países do reino",
     "static.report.historicalConsumptionDiff": "Diferença de consumo histórico",
     "static.report.isincludeplannedshipmentSelect": "Incluir embarques planificados",
+    "static.whatIf.validEndValue": "Insira o valor final",
     "static.compareAndSelect.belowLowestConsumption": "% abaixo da previsão de menor consumo.",
     "static.extrapolation.MoreSensitive": "Modelos mais sofisticados são mais sensíveis a problemas nos dados",
     "static.common.listtree": "Lista de Árvores de Previsão",
@@ -697,6 +707,7 @@
     "static.message.confirmPasswordRequired": "Confirmar a nova senha",
     "static.programPlanningUnit.validReorderFrequencyText": "Insira o intervalo de um pedido para o outro (# meses entre novos pedidos)",
     "static.procurementAgentProcurementUnit.procurementUnitAlreadyExists": "Esta unidade de aquisição já existe",
+    "static.scenarioPlanning.endValue": "Valor final",
     "static.product.unit": "Unidade de previsão",
     "static.report.exportCsv": "Exportar CSV",
     "static.supplyPlan.daysOfStockMaxValue": "Insira um valor menor ou igual a 31",
@@ -1932,6 +1943,7 @@
     "static.report.min": "Mín",
     "static.report.fundingSource": "Custo de embarques por fonte de financiamento",
     "static.common.loadDeleteDataSet": "Descarregar ou deletar programa",
+    "static.scenarioPlanning.phaseInPhaseOut": "Previsão de entrada/saída do produto",
     "static.importFromQATSupplyPlan.supplyPlanProgram": "Programa de plano do suprimento",
     "static.dataEntryAndAdjustments.DaysInMonth": "(Nº de dias no mês)",
     "static.tree.startValue": "Valor inicial",
@@ -2524,6 +2536,7 @@
     "static.supplyPlan.orderNoAndPrimeLineNo": "Número do pedido e número da linha principal",
     "static.dashboard.programdashboard": "Painel do programa",
     "static.common.selectPlanningUnit": "Selecione a unidade de planeamento",
+    "static.program.noOfProgramsUsingPU": "# Programas usando PU",
     "static.listTree.deleteDuplicateExistingTree": "Excluir ou duplicar árvores de previsão existentes clicando com o botão direito em uma linha",
     "static.scenarioPlanning.monthInFutureValidation": "Selecione Meses no Futuro para AMC",
     "static.forecastingUnit.genericForecastingUnitName": "Nome genérico para unidade de previsão",
@@ -2620,6 +2633,7 @@
     "static.report.forecastErrorMonthlyFormulaNew6": "Se “Mostrar consumo ajustado por ruptura de estoque?” caixa de seleção estiver marcada, o QAT usa o consumo real ajustado em vez do consumo real. O QAT calcula o total de dias do mês com base no calendário.",
     "static.report.forecastErrorMonthlyFormulaNew7": "Se houver",
     "static.supplyPlanFormula.expiredStockNote": "Todos os lotes começam com os embarques. Presume-se que todos os vencimentos ocorram no início do mês, independentemente da data de vencimento. Para mais detalhes sobre os cálculos dos lotes, consulte o Manual do Usuário sobre as Regras, em anexo.",
+    "static.program.noOfProgramsUsingFU": "# Programas usando FU",
     "static.currency.currencycodemax4digittext": "Máximo de 4 caracteres",
     "static.ModelingTransfer.ModelingTransfer": "Adicionar/editar nó - modelagem/transferência",
     "static.report.forecastErrorMonthlyFormulaNew8": "Para cada mês, soma o consumo real (ou consumo real ajustado) em todas as regiões, de modo que haja apenas um valor de consumo real por mês.",
@@ -3174,6 +3188,7 @@
     "static.dashboard.shipmentGlobalDemandView": "Embarques (Global)",
     "static.login.goOnline": "Fique online",
     "static.dataentry.showErrors": "Mostrar apenas os erros",
+    "static.module": "Módulo",
     "static.supplyPlan.endingBalance": "Balanço final",
     "static.usageTemplate.fuPerPersonPerTime": "Nº de FU / Pessoa / Tempo",
     "static.common.youdatastart": "Os seus dados começaram aqui",
