--- a/src/assets/img/locales/sp.json
+++ b/src/assets/img/locales/sp.json
@@ -113,10 +113,17 @@
     "static.report.forcastingUOM": "Unidad de medida del producto (estimación)",
     "static.country.countryadd": "Agregar país",
     "static.tracercategory.tracercategory": "Categoría de seguimiento",
+    "static.momper.tooltip5": "(% de la población (sin estacionalidad))*(1+Índice de estacionalidad)+(Cambio manual). En otras palabras, el % final para este nodo.",
+    "static.momper.tooltip6": "Valor del nodo padre.",
+    "static.momper.tooltip3": "Ingrese un % positivo para un valor aumentado en este mes o un valor negativo para un valor disminuido.  Por ejemplo, 5% indica que el valor de este mes está un 5% por encima del valor no estacional (o 105%), mientras que -5% indica que está un 5% por debajo del valor no estacional (o 95%).",
+    "static.momper.tooltip4": "Ingrese cualquier cambio no capturado por la tabla de modelado o el índice de estacionalidad. Si está marcada la casilla \"El cambio manual afecta a los meses futuros\", este cambio afectará a los meses futuros. Si no está marcado, este cambio solo afectará al mes actual.",
+    "static.momper.tooltip1": "El cambio calculado está determinado por la tabla de modelado anterior.",
+    "static.momper.tooltip2": "(% del mes anterior) + (cambio calculado +/-%)",
     "static.extrapolation.SimpleLinear": "Regresión lineal simple",
     "static.dashboard.realmlevelmaster": "Datos maestros del dominio",
     "static.extrapolation.TripleExponential": "Suavizado triple exponencial (Holt-Winters)",
     "static.extrapolation.MAE": "MAE (Error absoluto medio)",
+    "static.momper.tooltip7": "(% de la matriz) * (Valor de la matriz). En otras palabras, el valor previsto para este nodo es el producto de las dos columnas anteriores.",
     "static.compareAndSelect.totalForecast": "Estimación total",
     "static.supplyPlan.erpShipments": "Pedidos vinculados al ERP",
     "static.dashboard.procurementUnit": "Productos (compra)",
@@ -167,6 +174,7 @@
     "static.dashboard.qatProblemList": "Lista de problemas QAT",
     "static.placeholder.LagInMonthFUNode": "Utilice esta función para el uso del producto por etapas. Por ejemplo, si el atraso es 2, el uso del producto comenzará 2 meses después de las fechas del nodo de orígen.",
     "static.priority.medium": "Medio",
+    "static.import.doNoImportCheckbox": "No importe todas las unidades de planificación no asignadas",
     "static.mt.reminders4A": "Si desvincula un pedido, volverá a mostrar la nota del pedido original y no transferirá las actualizaciones que realizó después de la vinculación. Para esto, recomendamos copiar la nota antes de desvincular y pegarla en el pedido manual después.",
     "static.dataentry.maxRange": "Seleccione el rango de fechas dentro de los 36 meses",
     "static.program.programmanager": "Gestor del programa",
@@ -212,6 +220,7 @@
     "static.procurementUnit.heightQtyText": "Ingresar altura",
     "static.translation.pourtegese": "Portugués",
     "static.tooltip.StartValueModelingTool": "Si desea crear varias filas de modelado en las que el valor final de la primera fila debe ser el valor inicial de la segunda fila y está utilizando la calculadora de modelado, deberá hacer clic en el botón Actualizar antes de crear la segunda fila, de lo contrario el valor inicial será el mismo que el de la primera fila",
+    "static.whatIf.validStartValue": "Introduzca el valor inicial",
     "static.tree.requires": "requiere",
     "static.procurementUnit.multiplierText": "Ingresar el factor de conversión",
     "static.supplyPlan.batchNumberMissing": "La cantidad total del lote especificado no coincide con la cantidad final del pedido",
@@ -654,6 +663,7 @@
     "static.dashboard.realmcountrylist": "Países del dominio",
     "static.report.historicalConsumptionDiff": "Diferencia de consumo histórico",
     "static.report.isincludeplannedshipmentSelect": "Incluir pedidos planificados",
+    "static.whatIf.validEndValue": "Introduzca el valor final",
     "static.compareAndSelect.belowLowestConsumption": "% por debajo de la estimación de consumo más bajo.",
     "static.extrapolation.MoreSensitive": "Los modelos más sofisticados son más sensibles a los problemas en los datos",
     "static.common.listtree": "Mostrar Árboles de Estimación",
@@ -697,6 +707,7 @@
     "static.message.confirmPasswordRequired": "Confirmar nueva contraseña",
     "static.programPlanningUnit.validReorderFrequencyText": "Ingrese la frecuencia de reorden (# meses entre reordenes)",
     "static.procurementAgentProcurementUnit.procurementUnitAlreadyExists": "Este Producto (compra) ya existe.",
+    "static.scenarioPlanning.endValue": "Valor final",
     "static.product.unit": "Producto (estimación)",
     "static.report.exportCsv": "Exportar CSV",
     "static.supplyPlan.daysOfStockMaxValue": "Ingresar un número que sea menor o igual a 31",
@@ -1932,6 +1943,7 @@
     "static.report.min": "Mín",
     "static.report.fundingSource": "Costo de pedidos por fuente de financiamiento",
     "static.common.loadDeleteDataSet": "Descargar o eliminar programa",
+    "static.scenarioPlanning.phaseInPhaseOut": "Producto previsto de entrada/salida gradual",
     "static.importFromQATSupplyPlan.supplyPlanProgram": "Programa de plan de suministros",
     "static.dataEntryAndAdjustments.DaysInMonth": "(# de días en el mes)",
     "static.tree.startValue": "Valor inicial",
@@ -2524,6 +2536,7 @@
     "static.supplyPlan.orderNoAndPrimeLineNo": "Número de pedido y de línea",
     "static.dashboard.programdashboard": "Tablero del programa",
     "static.common.selectPlanningUnit": "Seleccionar el producto",
+    "static.program.noOfProgramsUsingPU": "# Programas que usan PU",
     "static.listTree.deleteDuplicateExistingTree": "Elimine o duplique árboles existentes haciendo clic derecho en una fila",
     "static.scenarioPlanning.monthInFutureValidation": "Seleccione Meses en el futuro para AMC",
     "static.forecastingUnit.genericForecastingUnitName": "Nombre genérico del producto (estimación)",
@@ -2620,6 +2633,7 @@
     "static.report.forecastErrorMonthlyFormulaNew6": "Si aparece marcada la casilla \"¿Mostrar consumo ajustado por ruptura de stock?\", QAT utiliza el consumo real ajustado en lugar del consumo real. QAT calcula el total de días del mes según el calendario.",
     "static.report.forecastErrorMonthlyFormulaNew7": "Si hay",
     "static.supplyPlanFormula.expiredStockNote": "Todos los lotes comienzan con los pedidos. Se supone que todos los vencimientos ocurren a principios de mes, independientemente de la fecha de vencimiento. Para obtener más detalles sobre los cálculos de lotes, consulte el Manual del usuario - Anexo sobre reglas comerciales.",
+    "static.program.noOfProgramsUsingFU": "# Programas que usan FU",
     "static.currency.currencycodemax4digittext": "Máximo 4 caracteres",
     "static.ModelingTransfer.ModelingTransfer": "Añadir/Editar nodo - Modelado/Transferencia",
     "static.report.forecastErrorMonthlyFormulaNew8": "Para cada mes, suma el consumo real (o el consumo real ajustado) en todas las regiones, de modo que solo hay una cifra de consumo real por mes.",
@@ -3174,6 +3188,7 @@
     "static.dashboard.shipmentGlobalDemandView": "Pedidos: Vista Global de la Demanda",
     "static.login.goOnline": "Ir en línea",
     "static.dataentry.showErrors": "Mostrar sólo los errores",
+    "static.module": "Módulo",
     "static.supplyPlan.endingBalance": "Stock final",
     "static.usageTemplate.fuPerPersonPerTime": "# De FU / persona / tiempo",
     "static.common.youdatastart": "Tus datos comienzan desde aquí",
