--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3364,5 +3364,6 @@
     "static.report.fundingSourceTypeUsdAmount": "* The funding source type amount is in USD",
     "static.shipment.shipmentFundingSourceType": "Shipment Funding Source Type",
     "static.shipment.selectFundingSourceType": "Select Funding Source Type",
-    "static.shipment.groupBy": "Group By"
+    "static.shipment.groupBy": "Group By",
+    "static.funderType.funderTypeText": "Funding Source Type is required"
 }
