--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -1152,7 +1152,7 @@
     "static.manualTagging.search": "Search By RO/Order No.",
     "static.usageTemplate.lagInMonth": "Lag In Months",
     "static.tree.monthStartNoSeasonality": "Month Start (no seasonality)",
-    "static.tooltip.ForecastError": "Forecast Error calculated using Weighted Absolute Percentage Error (WAPE).",
+    "static.tooltip.ForecastError": "Forecast Error calculated using Weighted Absolute Percentage Error (WAPE). The error displayed is calculated always based on the total forecast",
     "static.planningUnitSetting.existingShipments": "Existing Shipments (",
     "static.message.addTreeTemplate": "Tree Template Added Successfully",
     "static.login.loginAgain": "Please login again to access QAT in online mode.",
