bulk extrapolation changes

--- a/src/assets/img/locales/en.json
+++ b/src/assets/img/locales/en.json
@@ -3252,5 +3252,6 @@
     "static.extrapolation.optimizeTES&ARIMA": "Optimize TES & ARIMA",
     "static.extrapolation.missingTES&ARIMA": "Missing TES & ARIMA",
     "static.extrapolation.extrapolateUsingDefaultParams": "Extrapolate using default parameters",
-    "static.extrapolation.extrapolateUsingOptimizedArimaAndTes": "Extrapolate with optimized ARIMA & TES"
+    "static.extrapolation.extrapolateUsingOptimizedArimaAndTes": "Extrapolate with optimized ARIMA & TES",
+    "static.extrapolation.bulkExtrapolationSuccess": "Bulk Extraploation done successfully"
 }
